# wingpanel-indicator-sensors

./: README.md  meson.build
data/: sensors.gresource.xml
debian/: changelog  control  copyright
po/: meson.build  ru.po  sensors-indicator.pot
src/: HWMonitor.vala  Indicator.vala  Utils.vala
src/Widgets/: MainGrid.vala
